--- a/tiki/css/main.css
+++ b/tiki/css/main.css
@@ -236,7 +236,6 @@ header .container_bottom_header ul li.item_menu_header:first-child
     right: 10px;
     justify-content: center;
     height: 2rem;
-    width: 16rem;
 }
 .container_bottom_header .sales_introduction .icon
 {
@@ -250,6 +249,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
 .navigation {
     background-color: white;
     height: 44px;
+    overflow: hidden;
   }
   .content {
     overflow: hidden;
@@ -270,7 +270,8 @@ header .container_bottom_header ul li.item_menu_header:first-child
     line-height: 46px;
     left: 0;
     display: none;
-    font-size: 2.2rem;
+    font-size: 17px;
+    padding:0 20px;
     cursor: pointer;
   }
   
@@ -280,12 +281,13 @@ header .container_bottom_header ul li.item_menu_header:first-child
     z-index: 9;
     line-height: 46px;
     right: 0;
-    font-size: 2.2rem;
+    font-size: 17px;
+    padding:0 20px;
     cursor: pointer;
   }
 .product {
     display: inline-block;
-    color: black;
+    color: rgb(56, 56, 61);
     font-size: 14px;
     margin: 0px 13px;
   }
@@ -831,6 +833,8 @@ padding: 0 5px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-right: 10px;
+    border-radius:5px;
     box-shadow: var(--box-shadow);
 }
 .container_slide_after_brand_auth_main
@@ -856,6 +860,7 @@ padding: 0 5px;
     opacity: 0.3;
     padding:3px 10px;
     border-radius:50%;
+    background:#eee;
     border:1px solid black;
  }
  .discount__icon:hover
@@ -940,11 +945,16 @@ padding: 0 5px;
 .banner_after_featured
 {
     margin: 2rem 0;
+    
+}
+.banner_after_featured .grid
+{
+    overflow: hidden;
 }
 .banner_after_featured .banner_after_featured_item
 {
     overflow: hidden;
-    border-radius: 30px;
+    border-radius: 10px;
     padding: 10px;
 }
 .banner_after_featured .banner_after_featured_item image
