--- a/tiki/css/main.css
+++ b/tiki/css/main.css
@@ -8,7 +8,7 @@
 
 *
 {
-    font-family: 'Roboto', sans-serif;
+   
     margin: 0 ;
     padding: 0;
     box-sizing: border-box;
@@ -20,7 +20,8 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-family: roboto,Helvetica,Arial,sans-serif;
+    font-size: 14px;
     overflow-x: hidden;
     scroll-padding-top: 5.5pm;
     scroll-behavior: smooth;
@@ -30,7 +31,7 @@ header
 { 
    
     padding-top: 2rem;
-    background: var(--blue);
+    background: rgb(26, 148, 255);
     justify-content: center;
     align-items: center;
     box-shadow: var(--box-shadow);
@@ -1538,7 +1539,10 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
 {
     display:none;
 }
-
+.navigation
+{
+    display: none;
+}
 .footer 
  {
      width: 100%;
@@ -1568,4 +1572,22 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
  {
      display: block;
  }
+
+.brand_auth_bottom .container_banner_item .banner_item
+ {
+    width: 100%;
+    height:100%
+ }
+ .brand_auth_bottom .container_banner_item .banner_item:last-child
+ {
+     display:none;
+ }
+ .list_container_suggest_today_body
+ {
+     width: 100%;
+ }
+li.container_suggest_today_body_item
+{
+ flex-basis: 100%;
+}
 }
