--- a/tiki/css/main.css
+++ b/tiki/css/main.css
@@ -18,7 +18,10 @@
     text-transform: capitalize;
     transition: all 0.2s linear;
 }
-
+body
+{
+    background:#f5f5fa;
+}
 html{
     font-family: roboto,Helvetica,Arial,sans-serif;
     font-size: 14px;
@@ -27,221 +30,178 @@ html{
     scroll-behavior: smooth;
 }
 
-header
-{ 
-   
-    padding-top: 2rem;
-    background: rgb(26, 148, 255);
-    justify-content: center;
-    align-items: center;
-    box-shadow: var(--box-shadow);
-     box-sizing: border-box;
-   
-}
-.bell_home ,.cart_home_top
-{
-    font-size: 17px;
-    color: #eee;
-    position: absolute;
-
-}
-.bell_home
-{
-    top: 20%;
-right:13%;
-display: none;
-}
-.cart_home_top
-{
-top: 20%;
-right: 6%;
-display: none;
-}
-.img_freeShip_top
-{
-    position: absolute;
-    width: 10rem;
-    top: 20%;
-    left: 6%;
-    display: none;
-}
-.img_freeShip_top img
-{
+.header {
     width: 100%;
-}
-header .container-header
-{
-    padding-bottom: 1rem;
-}
-header .logo
-{
-   
-    height: auto;
-}
-header .logo img
-{
-    width: 6rem;
-    height: auto;
-    object-fit: cover;
-}
-header .formSearch 
-{
-    width: 100%;
-    display: flex;
-    padding: 0;
-    box-shadow: var(--box-shadow);
-}
-
-header .formSearch input
-{
-    width: 84%;
-    padding: 0 1rem;
-    color: var(--light-color);
-    font-size: 1.3rem;
-    text-transform: none;
-}
-header .formSearch .btn
-{
-   width: 16%;
-    padding: 0 1rem;
-    background: #0D5CB6;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 1.4rem;
-    font-weight:500;
-}
-header .formSearch .btn i{
-    font-size:1.6rem;
-    margin-right: .5rem;
-    color:#eee;
-}
-
-.container-header .acount_user
-{
-    display: flex;
-    color: #fff;
-    justify-content: center;
-    align-items: center;
-}
-
-.container-header .acount_user .info_user
-{
-    display: flex;
-   flex-direction: column;
-   padding:.7rem 0 0 1rem;
-   display:column;
-   font-size: 1.2rem;
-   box-sizing: border-box;
-}
-
-.container-header .acount_user i
-{
-    font-size:3rem;
-}
-.container-header .acount_user .info_user .fa-caret-down
-{
-    font-size:1.2rem;
-    padding-left: .5rem;
-    box-sizing:var(--box-shadow)
-}
-
-.container-header .acount_user .info_user span
-{
-    margin-bottom: .5rem;
-}
-.container-header .cart_user
-{
-    color:#fff;
-    display: flex;
-    font-size:1.3rem;
-    justify-content: center;
-    align-items: center;
-}
-.container-header .cart_user .cart_icon
-{
-    position: relative;
-    
-}
-
-.container-header .cart_user .cart_icon i
-{
-    font-size:2.5rem;
-    justify-content: center;
-    align-items: center;
-    padding: 1.2rem 1rem;
-}
-
-.container-header .cart_user .cart_icon .amount_cart
-{
-    position:absolute;
-    border-radius: 50%;
-    background-color: rgb(236, 210, 63);
-    text-align:center;
-    padding:.3rem .7rem;
-    color:black;
-    font-weight: 500;
-    font-size:1.4rem;
-    top :.2rem;
-    right:0;
-
-}
-.container-header .cart_user span
-{
-
-}
-header .container_bottom_header 
-{
-    display : flex;
-    color : #fff;
-    font-size: 1.2rem;
-    justify-content: space-between;
-    
-    padding-bottom: 2rem;
+    height: 100px;
+    background-color: rgb(26, 148, 255);
+  }
   
-}
-header .container_bottom_header .logo img
-{
-    width :9rem;
-}
-header .container_bottom_header ul
-{
-    display: flex;
-    text-decoration:none;
-    list-style: none;
-    padding: 0;
-
-}
-header .container_bottom_header ul li.item_menu_header
-{
-    padding:0 .6rem;
-    text-transform: lowercase;
-    
-}
-header .container_bottom_header ul li.item_menu_header:first-child
-{
-    padding-left: 0;
-}
-.container_bottom_header .sales_introduction
-{
+  .header__container {
     position: relative;
-}
-.container_bottom_header .sales_introduction_box
-{
+    padding-top: 4px;
+  }
+  
+  .logo__container {
+    position: relative;
     display: flex;
-    border-radius: 2rem;
-    background: rgba(255, 255, 255, 0.25);
-    padding:1.2rem 1rem;
-    align-items: center;
+    flex-direction: column-reverse;
+  }
+  
+  .logo-tiki {
+    margin-top: 15px;
+  }
+  
+  .logo-img {
+    width: 60px;
+    height: 40px;
+  }
+  
+  .freeship-img {
+    width: 83px;
+    height: 12px;
+    margin-top: 8px;
+  }
+  
+  .mobile__cart {
+    display: none;
+    color: #fff;
+    font-size: 20px;
     position: absolute;
+    right: 0;
+    top: 40px;
+    letter-spacing: 10px;
+  }
+  /* search header */
+  .search-box {
+    margin-left: 15%;
+    width: 100%;
+  }
+  .input-box {
+    width: 75%;
+  }
+  .box {
+    padding: 0 12px;
+    height: 40px;
+    border-radius: 2px;
+    border: none;
+    outline: none;
+    width: 100%;
+  }
+  
+  .search__container {
+    margin-top: 15px;
+    display: flex;
+  }
+  
+  .search-btn {
+    width: 15%;
+  }
+  
+  .search-btn .btn {
+    border: 0;
+    border-radius: 2px;
+    width: 100%;
+    height: 40px;
+    color: #fff;
+    background: rgb(13, 92, 182);
+    cursor: pointer;
+  }
+  
+  .search-icon {
+    padding: 0 5px;
+    font-size: 16px;
+  }
+  
+  .search-img {
+    display: none;
+  }
+  
+  .food-bar {
+    margin-top: 8px;
+  }
+  .food-bar a {
+    color: #fff;
+  }
+  
+  .food {
+    margin-right: 12px;
+    font-size: 11px;
+  }
+  
+  .login {
+    margin-left: 40px;
+    margin-top: 15px;
+    display: flex;
+  }
+  .user-icon {
+    margin: 5px 9px 0 0;
+    color: #fff;
+    width: 32px;
+    height: 32px;
+    font-size: 28px;
+    text-align: center;
+  }
+  
+  .users {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    white-space: nowrap;
+  }
+  
+  .log-in {
+    font-size: 11px;
+    line-height: 12px;
+  }
+  
+  .user {
+    font-size: 13px;
+    line-height: 34px;
+  }
+  
+  .carts {
+    margin-top: 24px;
+    position: relative;
+    color: #fff;
+  }
+  
+  .cart-icon {
+    font-size: 24px;
+  }
+  .cart {
+    font-size: 11px;
+  }
+  
+  .carts__item {
+    position: absolute;
+    color: #000;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: rgb(253, 216, 53);
+    left: 18px;
+    top: -8px;
+  }
+  
+  .seller {
+    border-radius: 8px;
+    font-size: 12px;
+    padding: 4px 10px;
+    margin-left: 25%;
+    background-color: rgba(255, 255, 255, 0.25);
+    position: absolute;
+    bottom: 0;
     right: 10px;
-    justify-content: center;
-    height: 2rem;
-}
-.container_bottom_header .sales_introduction .icon
-{
-    padding-right: .5rem;
-} 
+  }
+  .sell {
+    color: #fff;
+    padding: 2px 0;
+  }
+  .store-icon {
+    font-size: 12px;
+  }
+  
 
 /* --------------------- endheader ------------------------ */
 
@@ -250,6 +210,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
 .navigation {
     background-color: white;
     height: 44px;
+    width: 100%;
     overflow: hidden;
   }
   .content {
@@ -272,7 +233,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
     left: 0;
     display: none;
     font-size: 17px;
-    padding:0 20px;
+    padding:0 25px;
     cursor: pointer;
   }
   
@@ -298,7 +259,8 @@ header .container_bottom_header ul li.item_menu_header:first-child
 .slide_home
 {
     height: 269px;
-    margin-bottom: 16px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 .slide_home .container-slide_left 
 {
@@ -383,7 +345,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
 /* -------------------------section price shock------------------- */
 .container_price_shork
 {
-    margin-bottom: 2rem;
+    margin-bottom: 16px;
 }
 .container_priceShock_bottom
 {
@@ -392,7 +354,8 @@ header .container_bottom_header ul li.item_menu_header:first-child
 }
 .container_price_shork .grid
 {
-    box-shadow: var(--box-shadow);
+   background: #fff;
+   border-radius: 6px;
     
 }
 .container_price_shork .container_priceShock_top
@@ -403,6 +366,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
     justify-content: space-between;
     padding: 16px;
     height: 65px;
+    border-bottom: 1px solid rgb(244, 244, 244);
 }
 .container_price_shork .container_priceShock_top .tittle
 {
@@ -608,16 +572,24 @@ header .container_bottom_header ul li.item_menu_header:first-child
     width: 100%;
     overflow: hidden;
     display: flex;
-   padding-bottom: 2rem;
+   margin-bottom: 16px;
 }
 .Banner_after_price_shock .swiper-wrapper
 {
     width: 100%;
 
 }
-.Banner_after_price_shock .container_banner_item .banner_item
+/* .Banner_after_price_shock .container_banner_item .banner_item
 {
   padding: 0 8px;
+} */
+.Banner_after_price_shock .container_banner_item .banner_item:first-child
+{
+    padding-right: 10px;
+}
+.Banner_after_price_shock .container_banner_item .banner_item:last-child
+{
+    padding-left: 10px;
 }
 .Banner_after_price_shock .container_banner_item .banner_item img
 {
@@ -630,19 +602,21 @@ header .container_bottom_header ul li.item_menu_header:first-child
 .info_product .grid
 {
     box-shadow: var(--box-shadow);
-    margin-bottom: 2rem;
+    margin-bottom: 16px;
 }
 .info_product
 {
-    margin-bottom: 2rem;
+    margin-bottom: 16px;
 }
 .info_product .grid ul.info_product_list
 {
     display: flex;
+    background-color:#fff;
     list-style: none;
-    padding:2rem 0;
+    padding:16px 0;
     justify-content: space-between;
     flex-wrap: wrap;
+    border-radius:6px;
 }
 .info_product .grid ul.info_product_list li.item_info_product
 {
@@ -674,19 +648,27 @@ header .container_bottom_header ul li.item_menu_header:first-child
 /* -------------banner after info product------------ */
 .banner_after_info_product
 {
-    margin-bottom: 2rem;
+    margin-bottom: 16px;
 }
 .banner_after_info_product .container_banner_item 
 {
     width: 100%;
     overflow: hidden;
     display: flex;
-    margin-bottom: 2rem;
+    
 }
 .banner_after_info_product .container_banner_item .banner_item
 {
   padding: 0 8px;
 
+}
+.banner_after_info_product .container_banner_item .banner_item:first-child
+{
+    padding-left: 0px;
+}
+.banner_after_info_product .container_banner_item .banner_item:last-child
+{
+    padding-right: 0px;
 }
 .banner_after_info_product .container_banner_item .banner_item img
 {
@@ -699,7 +681,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
 /* -------------brand_auth-------------- */
 .brand_auth .grid
 {
-    box-shadow: var(--box-shadow);
+    background: #fff;
 }
 .brand_auth .container_brand_auth .brand_auth_top
 {
@@ -811,11 +793,10 @@ padding: 0 5px;
 {
     left: 0px;
 }
+
+
 /* ---------------sile after brand auth ------------- */
-.slide_after_brand_auth
-{
-   margin-bottom: 2rem;
-}
+
 .container_slide_after_brand_auth
 {
     width: 130%;
@@ -827,7 +808,7 @@ padding: 0 5px;
     overflow: hidden;
     height: 289px;
 }
-.slide_after_brand_auth .slide_after_brand_auth_item
+ .slide_after_brand_auth_item
 {
     display: flex;
     width: 200px;
@@ -844,7 +825,7 @@ padding: 0 5px;
     position: relative;
     overflow: hidden;
 }
-.slide_after_brand_auth .slide_after_brand_auth_item span
+ .slide_after_brand_auth_item span
 {
     display: block;
     position: absolute;
