--- a/tiki/css/main.css
+++ b/tiki/css/main.css
@@ -185,7 +185,7 @@ html{
   }
   
   .seller {
-    border-radius: 8px;
+    border-radius: 10px;
     font-size: 12px;
     padding: 4px 10px;
     margin-left: 25%;
@@ -235,6 +235,8 @@ html{
     font-size: 17px;
     padding:0 25px;
     cursor: pointer;
+    padding-left: 3px;
+    padding-right:40px;
   }
   
   .icon-arrow-right {
@@ -244,7 +246,8 @@ html{
     line-height: 46px;
     right: 0;
     font-size: 17px;
-    padding:0 20px;
+    padding-left: 20px;
+    padding-right:3px;
     cursor: pointer;
   }
 .product {
@@ -291,12 +294,17 @@ html{
 }
 .swiper-pagination
 {
-    opacity: .8;
-    color: rgb(245, 245, 231);
+   /* 
+    color: rgba(255, 255, 255, 0.5); */
+}
+.swiper-pagination-bullet
+{
+    background-color:rgba(255, 255, 255, 0.5);
+    opacity: 1;
 }
 .swiper-pagination-bullet-active
 {
-    background: #fff;
+    background:rgb(255, 255, 255);
 }
 
 .container-slide_left .swiper-button-next,
@@ -374,11 +382,17 @@ html{
     justify-content: center;
     align-items: center;
 }
-.container_price_shork .container_priceShock_top .tittle .dealFlashIcon
+.dealFlashIcon
 {
-    width: 32px;
-    height: 20px;
+    width: 21px;
+  animation: .8s flash infinite;
    
+}
+@keyframes flash {
+    50% {
+      opacity: 0.3;
+      transform: scale(1.3);
+    }
 }
 .container_price_shork .container_priceShock_top .time_flashSale
 {
@@ -444,26 +458,29 @@ html{
 .container_priceShock_bottom .price
 {
    margin: 1rem 0;
-   justify-content: center;
+   display: flex;
+  
    align-items: center;
 }
 .container_priceShock_bottom .price span{
-    font-size: 17px;
     text-transform: lowercase;
     color: red;
-    font-weight: 500;
-    opacity: .8;
-    line-height: 24px;
     display: inline-block;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
 }
 .container_priceShock_bottom .price span.percent_discount
 {
-    border: 1px solid red;
-    font-size: 13px;
-    line-height: 16px;
-    padding: 1px;
+    
+    border: 1px solid rgb(255, 66, 78);
     border-radius: 2px;
-    font-weight: 400;
+    background-color: rgb(255, 240, 241);
+    font-weight: 500;
+    padding: 0px 2px;
+    line-height: 14px;
+    font-size: 12px;
+    margin-left: 6px;
 }
 .container_priceShock_bottom .deal_discount
 {
@@ -510,62 +527,31 @@ html{
     color: #eee;
     padding:3px;
     opacity: .5;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.icon_gesture_price_shock:hover
+{
+    opacity: 1;
 }
 
 
 .icon_gesture_price_shock.icon_prav_shockbottom
 {
     display:none;
-    padding-left: 15px;
-    padding-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    top: 120px;
 }
 
 .icon_gesture_price_shock.icon_next_shockbottom
 {
     right: 0;
-    padding-left: 5px;
-    padding-right: 15px;
+    top: 120px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
-/* .icon_gesture_price_shock
-{
-    position: absolute;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    right: 0;
-}
-.icon_gesture_price_shock i{
-    border-radius: 0;
-    background:var(--light-color);
-    color: #fff;
-    font-size: 25px;
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 15px;
-}
-.container_priceShock_bottom i
-{
-    padding-left: 15px;
-    padding-right: 5px;
-} */
-/* .container_priceShock_bottom .icon_prav i,
-.container_priceShock_bottom .icon_next i
 
-{
-    border-radius: 0;
-    background:var(--light-color);
-    color: #fff;
-    font-size: 25px;
-    text-align: center;
-    padding-left: 5px;
-    padding-right: 15px;
-}
-.container_priceShock_bottom .icon_prav i
-{
-    padding-left: 15px;
-    padding-right: 5px;
-}
- */
 /* -------------------------------Banner after price shock---------------------------- */
 .Banner_after_price_shock .container_banner_item 
 {
@@ -585,11 +571,11 @@ html{
 } */
 .Banner_after_price_shock .container_banner_item .banner_item:first-child
 {
-    padding-right: 10px;
+    padding-right: 16px;
 }
 .Banner_after_price_shock .container_banner_item .banner_item:last-child
 {
-    padding-left: 10px;
+    padding-left: 16px;
 }
 .Banner_after_price_shock .container_banner_item .banner_item img
 {
@@ -720,8 +706,9 @@ html{
 /* -----------------slide brand auth----------- */
 .brand_auth_bottom
 {
-   
     overflow: hidden;
+    padding: 0 10px;
+   
 }
 .brand_auth_bottom ul.container_banner_item 
 {
@@ -745,6 +732,10 @@ padding: 0 5px;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+}
+.brand_auth_bottom .swiper-pagination-bullet
+{
+    background-color: rgb(224, 224, 224);
 }
 .brand_auth_bottom .swiper-pagination-bullet-active
 {
@@ -789,11 +780,13 @@ padding: 0 5px;
 }
 .brand_auth_bottom .swiper-button-next
 {
-    right: 0px;
+    right: 15px;
+    top:95px;
 }
 .brand_auth_bottom .swiper-button-prev
 {
-    left: 0px;
+    top:95px;
+    left: 15px;
 }
 
 
@@ -803,12 +796,13 @@ padding: 0 5px;
 {
      width: 150%; 
     display: flex;
+  
 }
 .container_slide_after_brand_auth_main
 {
     width: 100%;
     padding: 0 7px;
-    margin: 16px 0;
+    margin: 0 0 16px 0;
     position: relative;
     overflow: hidden;
 }
@@ -1064,11 +1058,10 @@ padding: 0 5px;
 .suggest_today_bottom .list_suggest_today li.suggest_today_item span
 {
     display: block;
-    margin-top:10px;
+    padding-top:6px;
     font-size:13px;
     font-weight: normal;
     line-height:18px;
-    margin: 12px 0 0;
 
 }
 .suggest_today_item.active
@@ -1090,9 +1083,7 @@ padding: 0 5px;
     display: flex;
     list-style: none;
     justify-content:space-between;
-    margin-bottom: 4px;
     flex-wrap: wrap;
-    padding:10px;
   
 }
 .container_suggest_today_body ul.list_container_suggest_today_body li.container_suggest_today_body_item
@@ -1149,29 +1140,30 @@ li.container_suggest_today_body_item .vote_amount span
 
 li.container_suggest_today_body_item  .price
 {
-   margin: 1rem 0;
-   justify-content: center;
+    margin: 1rem 0;
+   display: flex;
+  
    align-items: center;
 }
 li.container_suggest_today_body_item  .price span{
-    font-size: 17px;
+
     text-transform: lowercase;
     color: red;
-    font-weight: 500;
-    opacity: .8;
-    line-height: 24px;
     display: inline-block;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
 }
 li.container_suggest_today_body_item  .price span.percent_discount
 {
-    display: inline-block;
-    border: 1px solid red;
-    font-size: 13px;
-    line-height: 16px;
-    padding: 1px;
+    border: 1px solid rgb(255, 66, 78);
     border-radius: 2px;
-    font-weight: 400;
-    margin-left: 10px;
+    background-color: rgb(255, 240, 241);
+    font-weight: 500;
+    padding: 0px 2px;
+    line-height: 14px;
+    font-size: 12px;
+    margin-left: 6px;
 }
 .infor_suggest_today
 {
@@ -1186,13 +1178,23 @@ li.container_suggest_today_body_item  .price span.percent_discount
     padding: 8px 12px;
     border-radius: 4px;
     border: 1px solid rgb(13, 92, 182);
-    color: rgb(13, 92, 182);
+   
     font-size: 13px;
     text-align: center;
+    align-self: center;
+    font-weight: 550;
 }
-.view_more:hover
+.view_more a
+{
+    color: rgb(13, 92, 182);
+}
+.view_more:hover 
 {
     background-color: rgb(13, 92, 182);
+    
+}
+.view_more:hover a
+{
     color: #fff;
 }
 /* --------------------footer---------------------- */
@@ -1368,7 +1370,52 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
 
 
 
-
+.header_mobile_container .header_mobile_container_top
+{
+    display: flex;
+    font-size:14px;
+    color: #fff;
+    padding-top: 16px;
+    padding-left: 15px;
+    align-items: center;
+    width: 100%;
+}
+.header_mobile_container .header_mobile_container_top .header_mobile_logo
+{
+    overflow: hidden;
+   
+}
+.img_freeShip_top
+{
+    width:80px;
+}
+.img_logo_top
+{
+    width:40px;
+    margin-left: 70px;
+}
+.header_mobile_logo img
+{
+    width: 100%;
+    object-fit: cover;
+}
+.bell_home
+{
+    margin-left: 110px;
+}
+.cart_home_top
+{
+    margin-left: 10px;
+}
+.header_mobile_container_bottom
+{
+    padding:0  15px;
+    width:100%;
+}
+.header_mobile_container_bottom input
+{
+    width: 100%;
+}
 
 
 
@@ -1399,20 +1446,10 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
     {
         width: 90%;
     }
-    .container-header .formSearch
-    {
-        display: flex;
-        min-width:70%;
-        padding-left: 20px;
-    }
- .container-header .acount_user
- {
-     display: none;
- }
- .container-header .cart_user
- {
-     display: none;
- }
+  .header  .container
+  {
+      display: none;
+  }
 .container_bottom_header .listitem_menu_header
 {
     display: flex;
@@ -1431,7 +1468,10 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
     html{
         font-size: 55%;
     }
-    
+    .header  .container
+    {
+        display: none;
+    }
     .slide_home .container-banner_right
 {
     display:none;
@@ -1464,9 +1504,21 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
  }
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width:750px)
 { 
-    header
+    .header
     {
         background: #141694;
     }
@@ -1582,5 +1634,6 @@ ul.list_nav_mobile li.nav_mobile_item .Nav_mobile_title
 li.container_suggest_today_body_item
 {
  flex-basis: 100%;
+ padding:0px 50px;
 }
 }
