--- a/tiki/css/main.css
+++ b/tiki/css/main.css
@@ -271,7 +271,7 @@ html{
     height: 269px;
     overflow: hidden;
     border: .5rem;
-    padding-right: .7rem;
+    padding-right: 5px;
     position: relative;
 }
 
@@ -844,7 +844,7 @@ padding: 0 5px;
     font-size: 17px;
     color: #333;
     opacity: 0.3;
-    padding:3px 10px;
+    padding:3px 8px;
     background:#eee;
     border:1px solid black;
     border-radius:50%
